--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,11 +29,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-brand-light font-sans">
     <div id="root"></div>
-    <script defer src="/bundle.js"></script>
-<script type="module" src="/index.tsx"></script>
+    <script type="module" defer src="/bundle.js"></script>
 </body>
 </html>
